<resources>
    <string name="app_name">IPTV APP</string>

    <string name="preference_file">preference_file</string>
    <string name="pref_token">pref_token</string>
    <string name="pref_username">pref_username</string>
    <string name="pref_password">pref_password</string>
    <string name="pref_update_movie">pref_update_movie</string>
    <string name="pref_update_series">pref_update_series</string>
    <string name="pref_update_live">pref_update_live</string>
    <string name="pref_update_sport">pref_update_sport</string>
    <string name="pref_current_favorite">pref_current_favorite</string>
    <string name="pref_default_on">pref_default_on</string>
    <string name="pref_default_is_set">pref_default_set</string>

    <string name="menu_live">LIVE</string>
    <string name="menu_recommend">HIT MOVIES</string>
    <string name="menu_sport">RE-RUN</string>
    <string name="menu_favorite">FAVORITE</string>
    <string name="menu_movie">MOVIE</string>
    <string name="menu_series">SERIES</string>
    <string name="menu_advertise">ADVERTISE</string>
    <string name="menu_vip">VIP</string>

    <string name="mobile_welcome_title">Welcome to IPTV APP</string>
    <string name="mobile_welcome_description">Try opening this application on an Android TV for a great movie experience.</string>

    <string name="watch">รับชม</string>
    <string name="sound_en">เสียง: EN</string>
    <string name="sound_th">เสียง: TH</string>
    <string name="add_fav">เพิ่มรายการโปรด</string>
    <string name="remove_fav">ลบรายการโปรด</string>

    <string name="topup_wallet_date">วันที่โอน\nWallet</string>
    <string name="topup_wallet_ref">เลขอ้างอิง\nWallet</string>
    <string name="topup_money_ref">เลขอ้างอิง\nTruemoney</string>

    <string name="catalog_url">https://commondatastorage.googleapis.com/android-tv/android_tv_videos.json</string>
    <string name="prefix_url">https://commondatastorage.googleapis.com/android-tv/Sample%20videos/</string>

    <string name="global_search">GLOBALSEARCH</string>

    <string name="noah_description">to build an Ark to save creation from the coming flood.</string>
    <string name="noah_title">Noah</string>
    <string name="dragon2_title">How to Train Your Dragon 2</string>
    <string name="dragon2_description">Set in the mythical world of burly Vikings and wild dragons,
        and based on the book by Cressida Cowell, the action comedy tells the story of Hiccup, a
        Viking teenager who doesn\'t exactly fit in with his tribe\'s longstanding tradition of
        heroic dragon slayers. Hiccup\'s world is turned upside down when he encounters a dragon
        that challenges he and his fellow Vikings to see the world from an entirely different point
        of view.
    </string>
    <string name="maleficent_title">Maleficent</string>
    <string name="maleficent_description">The untold story of Disney\'s most iconic villain from the
        1959 classic "Sleeping Beauty." A beautiful, pure-hearted young woman with stunning black
        wings, Maleficent has an idyllic life growing up in a peaceable forest kingdom, until one
        day when an invading army of humans threatens the harmony of the land.
    </string>

    <string name="browse_title"><![CDATA[IPTV APP]]></string>
    <string name="related_movies">แนะนำ</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
