<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_padding_large"
    android:paddingLeft="@dimen/margin_padding_normal"
    android:paddingRight="@dimen/margin_padding_normal"
    android:paddingTop="@dimen/margin_padding_xlarge"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_padding_large"
            android:layout_marginRight="@dimen/margin_padding_small"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="44sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_padding_xlarge"
            android:padding="12dp"
            android:nextFocusDown="@+id/btn_recommend"
            android:nextFocusLeft="@+id/btn_recommend"
            android:nextFocusRight="@+id/btn_recommend"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/bg_search_button">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/search_selected"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_xsmall"
                android:text="SEARCH"
                android:textColor="@color/bg_movie_text"
                android:textSize="26sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_padding_large"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID: "
                android:textColor="@color/light_purple"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Test123"
                android:textColor="@color/light_purple"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_large"
                android:text="Remaining: - Days"
                android:textColor="@color/light_purple"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/btn_live"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_home_button"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusUp="@+id/btn_search"
                android:nextFocusDown="@+id/btn_movie"
                android:nextFocusRight="@+id/btn_recommend"
                android:padding="@dimen/margin_padding_xxsmall">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_live"
                    app:riv_corner_radius="@dimen/margin_padding_small"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="@dimen/margin_padding_normal"
                    android:text="@string/menu_live"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_hit"
                android:layout_width="460dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_home_button"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusUp="@+id/btn_search"
                android:nextFocusLeft="@+id/btn_live"
                android:nextFocusDown="@+id/btn_series"
                android:nextFocusRight="@+id/btn_sport"
                android:padding="@dimen/margin_padding_xxsmall">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/img_hit1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:riv_corner_radius_top_left="@dimen/margin_padding_small"
                        app:riv_corner_radius_bottom_left="@dimen/margin_padding_small"/>

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/img_hit2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/img_hit3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:riv_corner_radius_top_right="@dimen/margin_padding_small"
                        app:riv_corner_radius_bottom_right="@dimen/margin_padding_small" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:padding="@dimen/margin_padding_small"
                    android:text="@string/menu_recommend"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_banner_text"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_sport"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_home_button"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusUp="@+id/btn_search"
                android:nextFocusLeft="@+id/btn_recommend"
                android:nextFocusDown="@+id/btn_advertise"
                android:nextFocusRight="@+id/btn_favourite"
                android:padding="@dimen/margin_padding_xxsmall">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_sport"
                    app:riv_corner_radius="@dimen/margin_padding_small"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="@dimen/margin_padding_small"
                    android:text="@string/menu_sport"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:lineSpacingExtra="-5dp"
                    android:gravity="center_horizontal"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_favorite"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_home_button"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusUp="@+id/btn_search"
                android:nextFocusLeft="@+id/btn_sport"
                android:nextFocusDown="@+id/btn_setting"
                android:padding="@dimen/margin_padding_xxsmall">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_favorite"
                    app:riv_corner_radius="@dimen/margin_padding_small"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="@dimen/margin_padding_normal"
                    android:text="@string/menu_favorite"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/btn_movie"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_home_button"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusUp="@+id/btn_live"
                android:nextFocusRight="@+id/btn_series"
                android:padding="@dimen/margin_padding_xxsmall">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_movie"
                    app:riv_corner_radius="@dimen/margin_padding_small"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/margin_padding_normal"
                    android:text="@string/menu_movie"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_series"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_home_button"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusLeft="@+id/btn_movie"
                android:nextFocusUp="@+id/btn_recommend"
                android:nextFocusRight="@+id/btn_advertise"
                android:padding="@dimen/margin_padding_xxsmall">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_series"
                    app:riv_corner_radius="@dimen/margin_padding_small"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="@dimen/margin_padding_normal"
                    android:text="@string/menu_series"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_advertise"
                android:layout_width="460dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_home_button"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusLeft="@+id/btn_series"
                android:nextFocusUp="@+id/btn_sport"
                android:nextFocusRight="@+id/btn_setting"
                android:padding="@dimen/margin_padding_xxsmall">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/img_advertise"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:riv_corner_radius="@dimen/margin_padding_small"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_padding_small"
                    android:text="@string/menu_advertise"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_banner_text"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_setting"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_home_button"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusLeft="@+id/btn_advertise"
                android:nextFocusUp="@+id/btn_favourite"
                android:padding="@dimen/margin_padding_xxsmall">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_setting"
                    app:riv_corner_radius="@dimen/margin_padding_small"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="@dimen/margin_padding_normal"
                    android:text="@string/menu_setting"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_padding_large">

        <TextView
            android:id="@+id/datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="1/1/2017 12:00"/>

    </RelativeLayout>

</LinearLayout>
